--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-class-component": "^7.2.3",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-i18n": "^8.17.3",
+    "vue-meta": "^2.4.0",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
